--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@rdbird/eslint-config": "^5.0.1",    
+    "prettier": "^1.7.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-scripts": "1.0.13",
@@ -11,7 +13,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "format": "eslint . --fix",
+    "lint": "eslint .",
+    "test": "react-scripts test --env=jsdom",    
     "eject": "react-scripts eject"
   }
 }
