--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "dependencies": {
     "@rdbird/eslint-config": "^5.0.1",
     "date-fns": "^1.28.5",
+    "eslint": "^4.8.0",
     "parse-link-header": "^1.0.1",
     "prettier": "^1.7.0",
     "ramda": "^0.24.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-scripts": "1.0.13",
+    "react-scripts": "^1.0.13",
     "react-vis": "^1.7.5"
   },
   "scripts": {
